kustomize_old/base/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.org/websocket-services: home-assistant
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/version: 0.5.0
    helm.sh/chart: home-assistant-0.5.0
  name: home-assistant
  namespace: home-assistant
spec:
  ingressClassName: nginx
  rules:
    - host: home-assistant.sjoedin.se
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - home-assistant.sjoedin.se
      secretName: home-assistant-tls
